--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+body {
+    background: #ffffff;
+    font-family: "Fira Sans", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.auth-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: left;
+    margin-top: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.auth-inner {
+    width: 450px;
+    margin: 0 auto;
+    background: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 20px 55px 45px 55px;
+    border-radius: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1,
+p {
+    font-weight: 100;
+    color: black;
+    padding-bottom: 10px;
+    font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+span {
+    color: #FF0000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span::before {
+    display: inline;
+    content: "⚠ ";
+}
+
+input {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 6px;
+    border: 1px solid rgba(34, 35, 58, 0.2);
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+label {
+    line-height: 2;
+    text-align: left;
+    display: block;
+    margin-bottom: 5px;
+    margin-top: 15px;
+    color: #000000;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+input[type="submit"] {
+    background: #ff4500;
+    color: white;
+    border: none;
+    float: right;
+    width: 20%;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 6px;
+}
+
+button[type="submit"]:hover,
+input[type="submit"]:hover {
+    background: #f63302;
+}
+
+button[type="submit"]:active,
+input[type="button"]:active,
+input[type="submit"]:active {
+    transition: 0.3s all;
+    transform: translateY(3px);
+    border: 1px solid transparent;
+    opacity: 0.8;
+}
+
+input:disabled {
+    opacity: 0.4;
+}
+
+input[type="button"]:hover {
+    transition: 0.3s all;
+}
+
+button[type="submit"],
+input[type="button"],
+input[type="submit"] {
+    -webkit-appearance: none;
 }
